Fix status rendering bug on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ h2 {
 .game-form input[type=text] {
   width: 50%;
   border: 3px solid #2EC4B6;
+  padding-left: 5px;
 }
 
 .game-form input[type=submit] {
